LayoutTests/js/script-tests/destructuring-assignment.js
@@ -43,6 +43,10 @@ function testDeconstructArgLength() {
 }
 shouldBe("testDeconstructArgs('1', '2')", "'12'");
 shouldBe("testDeconstructArgLength('1', '2')", "2");
+var text = '3';
+Object.prototype.__defineGetter__(1, function(){ var r = text; text = "fail"; return r; })
+shouldBe("testDeconstructArgs('2')", "'23'");
+
 
 
 
